2014-01-05  Moritz Bunkus  <moritz@bunkus.org>

        * all: enhancement: The architecture (32bit/64bit) is mentioned in
        the version information of all programs.

2014-01-02  Moritz Bunkus  <moritz@bunkus.org>

        * build system: bug fix for 64bit builds on Windows
        (x86_64-w64-mingw32): use the correct processor architecture via
        separate Windows manifest files. Fixes mmg and mkvinfo not
        starting due to »error 0x0000007b«.

        * mkvmerge: bug fix: Fixed a potential endless loop due to an
        integer overflow in the code removing AVC/h.264 filler NALUs.

2014-01-01  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Fixed reading uncompressed PCM audio tracks
        from QuickTime/MP4 files in certain situations. Fixes #950.

        * mmg: enhancement: Made the »scanned files« list box sortable by
        all columns. Fixes #954.

2013-12-31  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: enhancement: The »additional parts« dialog will now show
        the files that make up an MPLS playlist. This is for informational
        purposes only and doesn't allow changing the playlist itself.

        * mkvmerge: bug fix: Reading from an MPLS playlist file is now
        done as if the second and following files referenced in that
        playlist had been appended to the first file from that
        playlist. Before they were treated as if they were additional
        parts. Fixes #934.

        * mmg: enhancement: a couple of fixes to tooltips: 1. Content
        correction for »splitting by chapters«; 2. no ugly re-formatting
        with wxWidgets 3.0.0 on Windows.

2013-12-30  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Improved the AAC, AC3 and MP3 header decoding
        error handling so that the corresponding parsing routines won't
        get stuck in endless loops when encountering certain garbage data
        patterns.

2013-12-29  Moritz Bunkus  <moritz@bunkus.org>
