@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Moritz Bunkus <moritz@bunkus.org>
 Homepage: http://www.bunkus.org/videotools/mkvtoolnix/
 Standards-Version: 3.9.2
-Build-Depends: debhelper (>= 7.0.50~), libwxgtk2.8-dev, ruby,
+Build-Depends: debhelper (>= 7.0.50~), libwxgtk2.8-dev,
+ ruby (>= 1.9) | ruby1.9 | ruby1.9.1 | ruby1.9.3,
  libbz2-dev, liblzo2-dev, zlib1g-dev, libmagic-dev,
  libflac-dev, libogg-dev, libvorbis-dev,
  libcurl4-gnutls-dev | libcurl4-openssl-dev,
