@@ -1,3 +1,7 @@
+2014-01-08  Moritz Bunkus  <moritz@bunkus.org>
+
+        * build system: Ruby 1.9.x is now required.
+
 2014-01-05  Moritz Bunkus  <moritz@bunkus.org>
 
         * all: enhancement: The architecture (32bit/64bit) is mentioned in
